添加github下载链接

--- a/docs.html
+++ b/docs.html
@@ -317,6 +317,8 @@
                     <li>中英文文件命名切换</li>
                 </ul>
                 <a href="https://qm.qq.com/cgi-bin/qm/qr?k=726741344" class="btn" target="_blank">加入QQ群下载</a>
+                或
+                <a href="https://github.com/LoosePrince/AI-File/releases/download/v1.1.0/AI._v1.1.0.exe" class="btn">从GitHub下载</a>
             </div>
         </div>
     </section>
