更新文档和下载链接为文脉通

--- a/docs.html
+++ b/docs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI文件整理助手 - 使用文档</title>
+    <title>文脉通 (DocStream Navigator) - 使用文档</title>
     <style>
         :root {
             --primary-color: #00c853;
@@ -234,7 +234,7 @@
 <body>
     <header class="header">
         <a href="/" class="logo">
-            <span>AI文件整理助手</span>
+            <span>文脉通 (DocStream Navigator)</span>
         </a>
         <div class="menu-toggle" onclick="toggleMenu()">
             <span></span>
@@ -261,7 +261,7 @@
     <div class="content">
         <section id="intro" class="section">
             <h2>软件介绍</h2>
-            <p>AI文件整理助手是一款基于人工智能技术的文件管理工具，能够智能识别文件内容，自动进行分类整理。本软件采用先进的AI模型，支持多种文件类型的分析和处理，让文件管理变得更加轻松高效。</p>
+            <p>文脉通 (DocStream Navigator) 是一款基于人工智能技术的文件管理工具，能够智能识别文件内容，自动进行分类整理。本软件采用先进的AI模型，支持多种文件类型的分析和处理，让文件管理变得更加轻松高效。</p>
             
             <h3>主要特点</h3>
             <ul class="feature-list">
@@ -324,7 +324,7 @@
             <h3>操作流程</h3>
             <div class="step">
                 <h4>1. 启动软件</h4>
-                <p>双击运行AI文件整理助手主程序。</p>
+                <p>双击运行文脉通 (DocStream Navigator) 主程序。</p>
             </div>
 
             <div class="step">
@@ -387,7 +387,7 @@
                 <h3>免费下载</h3>
                 <!-- <p style="color: var(--text-gray); margin: 1rem 0;">本软件完全免费，请加入QQ群：726741344下载最新版本</p> -->
                 <div class="download-buttons">
-                    <a href="dist/AI文件整理助手.exe" class="btn">直接下载</a>
+                    <a href="dist/文脉通.exe" class="btn">直接下载</a>
                     <span class="or-text">或</span>
                     <a href="https://github.com/LoosePrince/AI-File/releases/latest" class="btn">从GitHub下载</a>
                 </div>
