--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI文件整理助手 - 智能文件管理工具</title>
+    <title>文脉通 (DocStream Navigator) - 智能文件管理工具</title>
     <style>
         :root {
             --primary-color: #00c853;
@@ -220,7 +220,7 @@
 <body>
     <header class="header">
         <a href="/" class="logo">
-            <span>AI文件整理助手</span>
+            <span>文脉通 (DocStream Navigator)</span>
         </a>
         <div class="menu-toggle" onclick="toggleMenu()">
             <span></span>
@@ -282,7 +282,7 @@
                 <h3>免费下载</h3>
                 <!-- <p style="color: var(--text-gray); margin: 1rem 0;">本软件完全免费，请加入QQ群：726741344下载最新版本</p> -->
                 <div class="download-buttons">
-                    <a href="dist/AI文件整理助手.exe" class="btn">直接下载</a>
+                    <a href="dist/文脉通.exe" class="btn">直接下载</a>
                     <span class="or-text">或</span>
                     <a href="https://github.com/LoosePrince/AI-File/releases/latest" class="btn">从GitHub下载</a>
                 </div>
