更新文档：增加功能和安全特性

--- a/docs.html
+++ b/docs.html
@@ -267,9 +267,12 @@
             <ul class="feature-list">
                 <li>智能识别：使用先进的AI模型自动分析文件内容</li>
                 <li>多语言整理支持：支持中英文文件夹命名切换</li>
-                <li>灵活操作：支持文件复制或移动模式</li>
+                <li>灵活操作：支持文件复制或移动模式，支持文件重命名功能</li>
                 <li>多格式支持：支持图片、视频、文档等多种文件格式</li>
                 <li>高效处理：支持批量处理和自动化操作</li>
+                <li>智能整理：支持子文件夹的"整体模式"和"智能提取"，实现更精准的文件分类</li>
+                <li>安全可靠：支持整理缓存功能，方便随时还原（每次整理会更新缓存）</li>
+                <li>日志管理：独立的错误日志文件，按启动时间自动分割，方便追踪和排查问题</li>
             </ul>
         </section>
 
