--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 <p>使用先进的AI技术分析文件内容，支持图片、视频、文档等多种文件类型的智能识别</p>
             </div>
             <div class="feature-card">
-                <h3>智能重命名（开发中）</h3>
+                <h3>智能重命名</h3>
                 <p>即将推出：AI智能识别文件内容，自动生成合适的文件名，支持批量重命名和自定义命名规则</p>
             </div>
             <div class="feature-card">
