--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     <li>自定义AI模型</li>
                 </ul>
                 <h3>免费下载</h3>
-                <!-- <p style="color: var(--text-gray); margin: 1rem 0;">本软件完全免费，请加入QQ群：726741344下载最新版本</p> -->
+                <p style="color: var(--text-gray); margin: 1rem 0;">官网直接下载版本通常更新（新功能体验），Github通常代码更新了但是没发布正式版</p>
                 <div class="download-buttons">
                     <a href="dist/文脉通.exe" class="btn">直接下载</a>
                     <span class="or-text">或</span>
